# libvfio-user-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  shell.nix
libvfio-user/: Cargo.toml
libvfio-user-sys/: Cargo.toml  build.rs
libvfio-user-sys/patches/: increase-dma-region-limit.patch  increase-dma-region-limit_undo.patch
libvfio-user-sys/src/: lib.rs
libvfio-user/src/: callbacks.rs  dma.rs  lib.rs  setup.rs
