[package]
name = "libvfio-user-sys"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.68.1"
meson-next = "1.2.2"
pkg-config = "0.3.27"
diffy = "0.3.0"
anyhow = "1.0.75"

[dependencies]

[features]
default = ["build-static"]
build-static = []
build-shared = []
patch-dma-limit = []
